css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
/* end of CSS reset */

body {
  background-color: #e8e8e8;
}

.container {
  background-color: #062145;
  width: 350px;
  margin: 130px auto 145px auto;
  border-radius: 20px;
  box-shadow: 0 20px 40px #00000066;
  font-family: "Roboto", Arial, Helvetica, sans-serif;
  font-size: 1.5rem;
}

header {
  padding: 1rem 1rem 0.5rem 1rem;
  background-color: #041936;
  border-radius: 20px 20px 0 0;
  text-align: right;
  cursor: default;
}

.formula {
  color: #00c4ff;
  font-size: 1rem;
}

.result {
  color: #ffffff;
  font-size: 3.5rem;
}

.box-wrap {
  padding: 0 0.5rem 1rem 0.5rem;
  color: #ffffff;
}

.d-flex {
  display: flex;
}

.space-around {
  justify-content: space-around;
}

.flex-wrap {
  flex-wrap: wrap;
}

.box {
  width: 23%;
  text-align: center;
  padding: 1.5rem 0;
  margin-top: 1rem;
  cursor: pointer;
  border-radius: 16px;
}

.box:hover {
  background-color: #041936;
}

.math-symbol {
  background-color: #041936;
}

.math-symbol:hover,
.total:hover {
  color: #ffd633;
}

.clean {
  color: #00c4ff;
}

.total {
  width: 48%;
  text-align: right;
  border-radius: 16px;
  margin-top: 1rem;
  background-image: linear-gradient(90deg, #00c4ff 0%, #6c00ff 100%);
  position: relative;
  cursor: pointer;
}

.equal {
  position: absolute;
  right: 25%;
  top: 50%;
  transform: translate(50%, -50%);
}

